--- a/index.html
+++ b/index.html
@@ -11,24 +11,31 @@
 
 <body>
   <h1>Test Carousel</h1>
+  <div class="carousel__indicators">
+      <a href="#item-1" class="carousel__indicator" aria-label="Afficher l'image 1"></a>
+      <a href="#item-2" class="carousel__indicator" aria-label="Afficher l'image 2"></a>
+      <a href="#item-3" class="carousel__indicator" aria-label="Afficher l'image 3"></a>
+      <a href="#item-4" class="carousel__indicator" aria-label="Afficher l'image 4"></a>
+      <a href="#item-5" class="carousel__indicator" aria-label="Afficher l'image 5"></a>
+    </div>
   <div class="carousel" aria-labelledby="carousel-heading">
     <h2 id="carousel-heading" class="carousel__heading sr-only">
       Carousel d'images musicales
     </h2>
     <div class="carousel__container" role="region" aria-live="polite">
-      <div class="carousel__item">
+      <div class="carousel__item" id="item-1"> 
         <img src="/assets/img/agenda-01.avif" alt="Image musique 1" />
       </div>
-      <div class="carousel__item">
+      <div class="carousel__item" id="item-2">
         <img src="/assets/img/agenda-02.avif" alt="Image musique 2" />
       </div>
-      <div class="carousel__item">
+      <div class="carousel__item" id="item-3">
         <img src="/assets/img/agenda-03.avif" alt="Image musique 3" />
       </div>
-      <div class="carousel__item">
+      <div class="carousel__item" id="item-4">
         <img src="/assets/img/agenda-04.avif" alt="Image musique 4" />
       </div>
-      <div class="carousel__item">
+      <div class="carousel__item" id="item-5">
         <img src="/assets/img/agenda-05.avif" alt="Image musique 5" />
       </div>
     </div>
